# progressphl-data

./: .gitignore  README.md  pyproject.toml
data-products/dashboard-inputs/v2/: spi-metadata.json
data-products/geographies/: census-tracts.geojson  city-limits.geojson  neighborhoods.geojson  pumas.geojson
progressphl_data/: __init__.py  __main__.py  census_indicators.py  core.py  crosswalk.py  geo.py
progressphl_data/_cache/: tract-neighborhood-crosswalk.csv  tract-neighborhood-crosswalk.geojson  tract-puma-crosswalk.csv  tract-puma-crosswalk.geojson
progressphl_data/_cache/v1/: SPI Philly Tableau.xlsx
progressphl_data/_cache/v1/meta/: aliases.json  definitions.json  variables.json
progressphl_data/_cache/v2/: ProgressPHL_Recalculated_v1.xlsx
progressphl_data/datasources/: __init__.py  core.py
progressphl_data/datasources/cdc/: agg.py  core.py
progressphl_data/datasources/census/: agg.py  core.py
