[tool.poetry]
name = "progressphl-data"
version = "1.0.0"
description = "Data processing for ProgressPHL dashboard"
authors = ["Nick Hand <nicholas.adam.hand@gmail.com>"]
readme = "README.md"
packages = [{ include = "progressphl_data" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# boto3 = "^1.26.8"
# pandas = ">=1.5"
# simplejson = "^3.17.6"
# geopandas = ">=0.12"
# shapely = ">=2"
# python-dotenv = "^0.21.0"
# loguru = "^0.6.0"
# openpyxl = "^3.0.10"
# rtree = "^1.0.1"
# matplotlib = "^3.6.2"
# httpx = "^0.23.0"
# pygris = "^0.1.2"
# tryagain = "^1.0"
# bs4 = "^0.0.1"
# pydantic = "^1.10.4"
# backoff = "^2.2.1"
# carto2gpd = "^1.0.12"
# rasterio = "^1.3.4"
# rasterstats = "^0.17.0"
# esri2gpd = "^1.0.13"
# scikit-learn = "^1.2.2"
# kneed = "^0.8.2"
# seaborn = "^0.12.2"
# phila-style = "^0.1.1"
# statsmodels = "^0.13.5"
boto3 = "^1.28.30"
click = "^8.1.7"
simplejson = "^3.19.1"
python-dotenv = "^1.0.0"
geopandas = "^0.13.2"
pydantic = "^2.2.1"
httpx = "^0.24.1"
pygris = "^0.1.6"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"
jupyterlab = "^3.5.0"
isort = "^5.10.1"
jupyterlab-code-formatter = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
progressphl-data = "progressphl_data.__main__:cli"
